# database-ai-agent

./: CROSS_DATABASE_ANALYSIS_IMPLEMENTATION.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  INTELLIGENT_WORKFLOWS_SUMMARY.md  MEMORY_ARCHITECTURE_SUMMARY.md  MULTI_AGENT_COLLABORATION_SUMMARY.md  README.md  README_DATABASE_ABSTRACTION.md  app.py  install_dependencies.py  nlp_demo.py  pyproject.toml  requirements.txt
config/: env.example
docs/: advanced_memory_architecture.md  advanced_multi_agent_collaboration.md  architecture_refactoring_summary.md  database_adapter_extension.md  multi_agent_architecture.md  multi_agent_transformation_summary.md  text_chunking_best_practices.md
examples/: add_new_database.py  database_adapter_usage.py
src/: __init__.py
src/sql_analyzer/: __init__.py  agent.py  analyzer_base.py  config.py  models.py  report.py  slow_query_analyzer.py  tools.py
src/sql_analyzer/agent_core/: __init__.py
src/sql_analyzer/agent_core/agents/: __init__.py  base_agent.py  coordinator_agent.py  knowledge_agent.py  memory_agent.py  nlp_agent.py  sql_analysis_agent.py
src/sql_analyzer/agent_core/communication/: __init__.py  a2a_protocol.py  event_system.py
src/sql_analyzer/agent_core/management/: __init__.py  agent_orchestrator.py  context_manager.py  conversation_manager.py  intelligent_workflows.py  multi_agent_system.py  session_manager.py  task_orchestrator.py  workflow_templates.py
src/sql_analyzer/agent_core/models/: __init__.py  models.py
src/sql_analyzer/agent_core/services/: __init__.py  auto_optimizer.py  knowledge_service.py  rollback_manager.py  safety_validator.py  sql_integration.py  text_chunking.py
src/sql_analyzer/api/: rest_service.py
src/sql_analyzer/dashboard/: __init__.py  cross_database_visualizer.py  dashboard_components.py  dashboard_manager.py  metrics_collector.py  models.py
src/sql_analyzer/database/: __init__.py  adapters.py  config_manager.py  connection_manager.py  connector_base.py  cross_database_analyzer.py  cross_database_monitor.py  database_manager.py  distributed_query_optimizer.py  factory.py  models.py  mysql.py  oracle.py  postgresql.py  sqlite.py  sqlserver.py
src/sql_analyzer/nlp/: __init__.py  domain_dictionary.py  entity_extractor.py  intent_classifier.py  models.py  processor.py
